--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@splinetool/react-spline": "2.2.6",
     "framer-motion": "10.18.0",
     "clsx": "2.1.1",
     "tailwind-merge": "2.3.0",
-    "lucide-react": "0.395.0"
+    "lucide-react": "0.395.0",
+    "p5": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
